--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,15 +3,14 @@ name = "<PROJECT_NAME>"
 version = "<VERSION>"
 description = "<PROJECT_DESCRIPTION>"
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python = ">=<PYTHON_VERSION>"
 license = { text = "<LICENSE_NAME>" }
 keywords = ["python", "template"]
 classifiers = [
     "Development Status :: 3 - Alpha",
     "Intended Audience :: Developers",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.11",
-    "Programming Language :: Python :: 3.12",
+<PYTHON_CLASSIFIERS>
 ]
 
 [project.urls]
@@ -74,8 +73,8 @@ exclude = [
 line-length = 88
 indent-width = 4
 
-# Assume Python 3.11
-target-version = "py311"
+# Assume Python <PYTHON_VERSION>
+target-version = "py<PYTHON_VERSION_SHORT>"
 
 [tool.ruff.lint]
 select = ["E4", "E7", "E9", "F", "I", "UP", "B", "W", "ANN", "C4", "SIM", "RUF", "PT", "D"]
