--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,12 +4,17 @@
         "editor.formatOnSave": true,
         "editor.defaultFormatter": "charliermarsh.ruff",
         "editor.codeActionsOnSave": {
-            "source.fixAll": "explicit",
-            "source.organizeImports": "explicit"
+            "source.fixAll.ruff": "explicit",
+            "source.organizeImports.ruff": "explicit",
+            "source.organizeImports": "never"
         }
     },
     "files.exclude": {
         "**/__pycache__/": true
     },
-    "python.defaultInterpreterPath": "${workspaceFolder}/.venv/bin/python"
+    "python.defaultInterpreterPath": "${workspaceFolder}/.venv/bin/python",
+    "mypy-type-checker.importStrategy": "fromEnvironment",
+    "mypy-type-checker.path": ["${workspaceFolder}/.venv/bin/mypy"],
+    "mypy-type-checker.preferDaemon": true,
+    "mypy-type-checker.showNotifications": "onError"
 }
